--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Alteração de título para simular "alteração de layout" sugerida</title>
 </head>
 
 <body>
